[gd_scene load_steps=12 format=2]

[ext_resource path="res://characters/enemies/base/enemy_base.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/base/sprites/explosions/BaseExplosionDeath.png" type="Texture" id=2]
[ext_resource path="res://stages/assets/precise_visibility_notifier_2D.gd" type="Script" id=3]
[ext_resource path="res://characters/enemies/base/sounds/Hit.wav" type="AudioStream" id=4]
[ext_resource path="res://characters/enemies/base/scripts/enemy_state_machine.gd" type="Script" id=5]
[ext_resource path="res://characters/enemies/base/states/death.gd" type="Script" id=6]
[ext_resource path="res://items/ItemGenerator.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.08
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0.160235 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteExplosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteExplosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EnemyBase" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
hframes = 5
frame = 4

[node name="SpriteExplosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 5
frame = 4

[node name="PreciseVisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
script = ExtResource( 3 )

[node name="BaseAnimations" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 2 )
anims/death = SubResource( 3 )

[node name="SFX" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="ItemGenerator" parent="." instance=ExtResource( 7 )]

[connection signal="camera_exited" from="PreciseVisibilityNotifier2D" to="." method="on_camera_exited"]
[connection signal="animation_finished" from="BaseAnimations" to="StateMachine" method="_on_animation_finished"]
